@@ -44,10 +44,6 @@
 			none
 		</property>
 	</category>
-	<category name="XRC Properties">
-		<property name="bitmaps"	type="stringlist"	help="For XRC Only.&#x0A;A list of files to generate as wxBitmaps."/>
-		<property name="icons"		type="stringlist"	help="For XRC Only.&#x0A;A list of files to generate as wxIcons."/>
-	</category>
   </objectinfo>
   <objectinfo class="C++" smallIcon="c++.png" type="interface">
     <property name="permission" type="option" hidden="1">
