@@ -10,6 +10,12 @@ date Version 3.00.56
 * FS#328 - "Unknown style flag wxTE_BESTWRAP for wxTextCtrl"
   Removed the flag, it is the default, and #define'd to 0x0000, so it was pointless anyway.
 * FS#339 - "wx/icon.h not included when using resource icons in wxToolBar"
+^ Removed the two project-level XRC properties, "bitmaps" and "icons". 
+  These never worked properly, and wxFB is not the right place to enter that information,
+  a standalone XRC file written with any text-editor would be much better.
+  This was prompted by, and caused the closure of, these issues:
+  FS#340 - "bitmap resources are unnamed, preventing use of wxXmlResource::Get()->LoadBitmap()" 
+  FS#329 - "XRC Properties - Follow on"
 
 02/18/2008 Version 3.00.55 (RC7)
 * FS#319 - "Problems with Non-ASCII characters"
